--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-header></app-header>
+<app-header (nav)="onNav($event)"></app-header>
 <div class="container">
 	<div class="col-md-12">
-		<app-recipies></app-recipies>
-		<app-shopping-list></app-shopping-list>
+		<app-recipies *ngIf="feature === 'recipes'"></app-recipies>
+		<app-shopping-list *ngIf="feature === 'shopping'"></app-shopping-list>
 	</div>
 </div>
   
