--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,15 +5,15 @@
 		</div>
 		<div class="navbar-default">
 			<ul class="nav navbar-nav">
-				<li (click)="onNav('recipes')"><a href="#">Recipes</a></li>
-				<li (click)="onNav('shopping')"><a href="#">Shopping List</a></li>
+				<li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+				<li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown" appDropdown>
-					<a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span> </a>
+					<a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span> </a>
 					<ul class="dropdown-menu">
-						<li><a href="#"></a>Save Data</li>
-						<li><a href="#"></a>Fetch Data</li>
+						<li><a style="cursor: pointer;">Save Data</a></li>
+						<li><a style="cursor: pointer;">Fetch Data</a></li>
 					</ul>
 				</li>
 			</ul>
