--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a href="#" class="navbar-brand">Keto Kitchen</a>
+			<a routerLink="/" class="navbar-brand">Keto Kitchen</a>
 		</div>
 		<div class="navbar-default">
 			<ul class="nav navbar-nav">
