--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -83,13 +83,13 @@
 							<button 
 								class="btn btn-danger"
 								type="button"
-								(click)="onDeleteIngredient()"
+								(click)="onDeleteIngredient(i)"
 								>X</button>	
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-12">
-							<button type="button" class="btn btn-success" (click)="onAddIngredient(i)">Add Ingredient</button>
+							<button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
 						</div>
 					</div>
 				</div>
