--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="welcome-wrapper">
 	<h1 class="welcome">
-		Welcome to the Keto Kitchen
+		Welcome to the Keto Kitchen!
 	</h1>
 	<h3>Where the food is great, and the waistline is thin!</h3>
 	<p>We provide the best recipes and recipe service for the Keto diet.</p>
