--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<!-- <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a routerLink="/" class="navbar-brand">Keto Kitchen</a>
@@ -24,4 +24,19 @@
 			</ul>
 		</div>
 	</div>
+</nav> -->
+<nav>
+	<mat-toolbar color="primary">
+		<mat-toolbar-row>
+			<button mat-flat-button routerLink="/" class="title">Keto Kitchen</button>
+			
+			<button mat-button routerLink="/recipes" class="item-spacer">Recipes</button>
+			<button mat-button routerLink="/shopping-list" class="item-spacer">Shopping List</button>
+			<span class="example-spacer"></span>
+			<button mat-button  routerLink="/signin" class="item-spacer">Sign In</button>
+			<button mat-button  routerLink="/signup"class="item-spacer">Signup</button>
+			<!-- <mat-icon class="example-icon">favorite</mat-icon>
+			<mat-icon class="example-icon">delete</mat-icon> -->
+		</mat-toolbar-row>
+	</mat-toolbar>
 </nav>
