--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -4,7 +4,24 @@
 	[routerLink]="[index]"
 	routerLinkActive="active"
 	>
-	<div class="pull-left">
+	<mat-card class="example-card">
+		<mat-card-header>
+			<div mat-card-avatar class="example-header-image"></div>
+			<mat-card-title>{{ recipe.name }}</mat-card-title>
+			<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+		</mat-card-header>
+		<img mat-card-image [src]="recipe.imagePath" alt="{{ recipe.name }}" style="max-height: 250px;">
+		<mat-card-content>
+			<p>{{ recipe.description }}
+			</p>
+		</mat-card-content>
+		<mat-card-actions>
+			<button mat-button>LIKE</button>
+			<button mat-button>SHARE</button>
+		</mat-card-actions>
+	</mat-card>
+
+	<!-- <div class="pull-left">
 		<h4 class="list-group-item-heading">
 			{{ recipe.name }}
 		</h4>
@@ -14,5 +31,5 @@
 	</div>
 	<span class="pull-right">
 		<img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 50px;">
-	</span>
+	</span> -->
 </a>
