Home component styling

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="welcome-wrapper">
-	<h1 class="welcome">
+	<div class="welcome">
+	<h1 class="welcome-header">
 		Welcome to the Keto Kitchen!
 	</h1>
 	<h3>Where the food is great, and the waistline is thin!</h3>
@@ -7,6 +8,7 @@
 	<p>You can browse our recipes, and create your own shopping list,
 		or opt to have a weekly recipe plan created for you, complete with a shopping list.
 	</p>
+</div>
 	<mat-card class="example-card">
 			<mat-card-header>
 				<div mat-card-avatar class="example-header-image"></div>
