Recipe list, recipe component styling

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -27,7 +27,7 @@
 </nav> -->
 <nav>
 	<mat-toolbar color="primary">
-		<mat-toolbar-row>
+		<mat-toolbar-row class="toolbar">
 			<button mat-flat-button routerLink="/" class="title">Keto Kitchen</button>
 			
 			<button mat-button routerLink="/recipes" class="item-spacer">Recipes</button>
