--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,18 +1,12 @@
-<div class="row">
-	<div class="col-xs-12">
-		<button mat-raised-button color="primary" (click)="onNewRecipe()">
-			New Recipe
-		</button>
-	</div>
+<div class="recipes-header">
+	<button mat-raised-button color="primary" (click)="onNewRecipe()">
+		New Recipe
+	</button>
+	<p>Select a recipe for more details</p>
 </div>
+
 <hr>
-<div class="row">
-	<div class="col-xs-12">
-		<app-recipe-item  
-			*ngFor="let recipeEl of recipies, let i = index" 
-			[recipe]="recipeEl"
-			[index]="i"
-			>
-		</app-recipe-item>
-	</div>
+<div class="recipe-list">
+	<app-recipe-item *ngFor="let recipeEl of recipies, let i = index" [recipe]="recipeEl" [index]="i">
+	</app-recipe-item>
 </div>
