--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<!-- <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a routerLink="/" class="navbar-brand">Keto Kitchen</a>
@@ -25,3 +25,67 @@
 		</div>
 	</div>
 </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav> -->
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">Keto Kitchen</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">	
+				<li class="nav-item" routerLinkActive="active">
+					<a class="nav-link" routerLink="/recipes">Recipes</a>
+				</li>
+				<li class="nav-item" routerLinkActive="active">
+					<a class="nav-link" routerLink="/shopping-list">Shopping List</a>
+				</li>
+			</ul>
+
+			<ul class="navbar-nav ml-auto">
+					<ng-template [ngIf]="!authService.isAuthenticated()">
+							<li class="nav-item" >
+								<a class="nav-link" routerLink="/signin">Sign In</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" routerLink="/signup">Signup</a>
+							</li>
+					</ng-template>	
+					<li class="nav-item" *ngIf="authService.isAuthenticated()">
+						<a class="nav-link"style="cursor: pointer" (click)="onLogout()">Logout</a>
+					</li>
+
+					<li class="nav-item dropdown" appDropdown *ngIf="authService.isAuthenticated()">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Manage
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+								<a style="cursor: pointer;" class="dropdown-item" (click)="saveRecipes()">Save Data</a>
+								<a  style="cursor: pointer;" class="dropdown-item" (click)="getRecipes()">Fetch Data</a>
+							</div>
+						</li>
+				</ul>
+		</div>
+	</nav>
