Recipe components styling

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,40 +1,38 @@
-<div class="row">
-	<div class="col-md-5">
-		<img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive">
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<h1>{{ recipe.name}}</h1>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<div class="btn-group" appDropdown>
-			<button type="button" class="btn btn-primary dropdown-toggle">
-				Manage Recipe <span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu">
-				<li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
-				<li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit Recipe</a></li>
-				<li><a (click)="onDeleteRecipe()" style="cursor: pointer;">Delete Recipe</a></li>
-			</ul>
+<div class="container">
+	<div class="card pt-2 mt-2 ml-auto mr-auto" style="width: 30rem;">
+		<img class="card-img-top mx-auto p-2" [src]="recipe.imagePath" alt="{{ recipe.name }}">
+		<div class="card-body mx-auto">
+			<h5 class="card-title">{{ recipe.name}}</h5>
+			<p class="card-text">{{ recipe.description }}</p>
+			<!-- <a href="#" class="btn btn-primary">Manage Recipe</a> -->
+
+			<div class="dropdown">
+				<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+				 aria-haspopup="true" aria-expanded="false">
+					Manage Recipe
+				</button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<a class="dropdown-item" (click)="onAddToShoppingList()">Add to shopping list</a>
+					<a class="dropdown-item" (click)="onEditRecipe()">Edit Recipe</a>
+					<a class="dropdown-item" (click)="onDeleteRecipe()">Delete Recipe</a>
+				</div>
+			</div>
+
+
+			<!-- <div class="row">
+				<div class="col-xs-12">
+					{{ recipe.description }}
+				</div>
+			</div> -->
+
+				<div class="card-text">
+					<ul class="list-group mt-2">
+						<li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+							{{ ingredient.name }} - {{ ingredient.amount }}
+						</li>
+					</ul>
+				</div>
 		</div>
 	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		{{ recipe.description }}
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<ul class="list-group">
-			<li class="list-group-item"
-			*ngFor="let ingredient of recipe.ingredients"
-			>
-			{{ ingredient.name }} - {{ ingredient.amount }}
-		</li>
-		</ul>
-	</div>
+
 </div>
