--- a/src/app/recipes/recipies.component.html
+++ b/src/app/recipes/recipies.component.html
@@ -1,9 +1,9 @@
-<div class="row">
-	<div class="col-md-5">
+<div class="container">
+	<!-- <div class="col-md-12"> -->
 		<app-recipe-list>
 		</app-recipe-list>
-	</div>
-	<div class="col-md-7">
+	<!-- </div> -->
+	<!-- <div class="col-md-7">
 		<router-outlet></router-outlet>
-	</div>
+	</div> -->
 </div>
