--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,123 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<app-header></app-header>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<router-outlet></router-outlet>
-			<!-- <app-recipies *ngIf="feature === 'recipes'"></app-recipies>
-		<app-shopping-list *ngIf="feature === 'shopping'"></app-shopping-list> -->
-		</div>
+<!-- <div style="height: 100vh; background-color: rgba(255,0,0,0.1);">
+	<div class="h-20" style="width: 100%">
+		<app-header></app-header>
 	</div>
+	<div class="h-60">
+		<router-outlet></router-outlet>
+	</div>
+	<div class="h-20">
+		<app-footer></app-footer>
+	</div>
+</div> -->
+<!-- Page Container -->
+<div id="page-container" class="container-fluid pr-0 pl-0 h-100 d-flex flex-column">
+	<!-- Header -->
+
+	<app-header></app-header>
+	<!-- END Header -->
+
+	<!-- Main Container -->
+
+	<div>
+			<router-outlet></router-outlet>
+		<!-- <div class="col-md-12 text-center pt-5 pb-5">
+			<div class="pt-5 pb-5">
+				<h1>
+					<span class="main-text">
+						Login
+					</span>
+				</h1>
+				<p class="lead"><span class="main-text">
+						Login Now!
+					</span></p>
+			</div>
+		</div> -->
+	</div>
+
+
+	<!-- Content -->
+
+	<!-- <div class="d-flex justify-content-center fadeIn">
+		<div class="col-md-8 col-xs-12">
+			<div class="d-flex justify-content-center">
+				<div class="col-md-6 pt-5 pb-5 pr-0 pl-0">
+					<form class="form-horizontal" method="post">
+						<div class="form-group">
+							<div class="col-xs-12">
+								<div class="">
+									<label for="id_username">E-Mail</label>
+									<input id="id_username" class="form-control" maxlength="254" name="username" value="" type="text" required>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-xs-12">
+								<div class="">
+									<label for="id_password">Password</label>
+									<input id="id_password" class="form-control" name="password" type="password" required>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-xs-12">
+								<small class="float-right">
+									<a href="#" class="kf-links">Forgot Password?</a>
+								</small>
+							</div>
+						</div>
+						<div class="form-group mt-5">
+							<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 pl-0">
+								<button class="btn btn-sm btn-block btn-primary" type="submit">Login</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+
+		</div>
+	</div> -->
+
+	<!-- END Content -->
+
+	<!-- END Main Container -->
+
+	<!-- Footer -->
+	<footer class="w-100 d-flex justify-content-center mt-auto">
+			<app-footer class="w-100"></app-footer>
+		<!-- <div class="d-flex justify-content-between col-md-8 col-md-offset-2 mb-3 mt-5"> -->
+			<!-- Copyright Info -->
+			<!-- <div class="align-left">
+
+				<a class="font-weight-bold small kf-blue kf-links" href="#">Link1</a> |
+
+				<a class="font-weight-bold small kf-blue kf-links" href="/">Link2</a> |
+				<a class="font-weight-bold small kf-blue kf-links" href="/">Link3</a>
+			</div>
+			<div class="align-right small">
+				Crafted with Love by <a class="font-weight-bold kf-blue kf-links" href="#" target="_blank">Me</a>
+			</div> -->
+			<!-- END Copyright Info -->
+		<!-- </div> -->
+	</footer>
+	<!-- END Footer -->
 </div>
+
+<!-- END Page Container -->
+<!-- 
+<div class="container-fluid d-flex flex-column" style="overflow: auto; background-color: rgba(208, 0, 0, 0.749);">
+		<div class="w-100 d-inline-block" style="background-color: rgba(0, 255, 42, 0.865)">
+				<p>header</p>
+				<p>header</p>
+				<p>header</p>
+			</div>
+	<div class="w-100 d-inline-block" style="background-color: rgb(169, 10, 177)">
+		<p>qwer</p>
+		<p>qwer</p>
+		<p>qwer</p>
+	</div>
+	<div class="w-100 d-inline-block" style="background-color: rgba(0, 255, 42, 0.865)">
+		<p>footer</p>
+		<p>footer</p>
+		<p>footer</p>
+	</div>
+</div> -->
