--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,16 +1,18 @@
-<div class="row">	
-	<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-			<h1>Sign Up</h1>
-		<form (ngSubmit)="onSignup(f)" #f="ngForm">
-			<div class="form-group">
-				<label for="email">Email</label>
-				<input class="form-control" type="email" id="email" name="email" ngModel>
-			</div>
-			<div class="form-group">
-				<label for="password">Password</label>
-				<input class="form-control" type="password" id="password" name="password" ngModel>
-			</div>
-			<button class="btn btn-primary" type="submit">Sign Up</button>
-		</form>
+<div class="container">	
+	<div class="row justify-content-center">
+		<div class="col-xs-10 col-sm-10 col-md-8 col-lg-6 mt-4">
+				<h3 class="mb-4">Sign Up</h3>
+			<form (ngSubmit)="onSignup(f)" #f="ngForm">
+				<div class="form-group">
+					<label for="email">Email</label>
+					<input class="form-control" type="email" id="email" name="email" ngModel>
+				</div>
+				<div class="form-group">
+					<label for="password">Password</label>
+					<input class="form-control" type="password" id="password" name="password" ngModel>
+				</div>
+				<button class="btn btn-primary" type="submit">Sign Up</button>
+			</form>
+		</div>
 	</div>
 </div>
