--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -50,7 +50,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Keto Kitchen</a>
+		<a class="navbar-brand" href="/">Keto Kitchen</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
