--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,10 +1,20 @@
-<div class="welcome-wrapper">
-	<h1 class="welcome">
-		Welcome to the Keto Kitchen!
-	</h1>
-	<h3>Where the food is great, and the waistline is thin!</h3>
-	<p>We provide the best recipes and recipe service for the Keto diet.</p>
-	<p>You can browse our recipes, and create your own shopping list,
-		or opt to have a weekly recipe plan created for you, complete with a shopping list.
-	</p>
+<div class="justify-content-center">
+	<div class="welcome-wrapper mt-4">
+		<h1 class="welcome">
+			Welcome to the Keto Kitchen!
+		</h1>
+		<h3>Where the food is great, and the waistline is thin!</h3>
+		<p>We provide the best recipes and recipe service for the Keto diet.</p>
+		<p>You can browse our recipes, and create your own shopping list,
+			or opt to have a weekly recipe plan created for you, complete with a shopping list.
+		</p>
+	</div>
+	<div class="home-images d-flex flex-row mt-4 align-items-center">
+		<div class="m-2">
+			<img class="img-fluid img-thumbnail" src="../../../assets/img/vegies.jpeg" alt="healthy vegies">
+		</div>
+		<div  class="m-2">
+			<img class="img-fluid img-thumbnail" src="../../../assets/img/wrap.jpeg" alt="delicious wrap">
+		</div>
+	</div>
 </div>
