--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,99 +1,73 @@
-<div class="row">
-	<div class="col-xs-12">
+<div class="container">
+	<div class="row justify-content-center mt-4 mb-4">
+		<div class="col-xs-8">
 
-		<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-			<div class="row">
-				<div class="col-xs-12">
-					<button 
-						type="submit" 
-						class="btn btn-success"
-						[disabled]="!recipeForm.valid"
-						>
+			<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+				<!-- <div class="row"> -->
+				<div class="form-group">
+					<button type="submit" class="btn btn-success mr-2" [disabled]="!recipeForm.valid">
 						Save
 					</button>
 					<button type="button" class="btn btn-danger" (click)="onCancel()">
 						Cancel
 					</button>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12">
-					<div class="form-group">
-						<label for="name">Name</label>
-						<input 
-							type="text"
-							id="name"
-							formControlName="name"
-							class="form-control"
-						>
+				<!-- </div> -->
+				<!-- <div class="row name-row"> -->
+				<!-- <div class="col-xs-12"> -->
+				<div class="form-group">
+					<label for="name">Name</label>
+					<input type="text" id="name" formControlName="name" class="form-control">
+					<!-- </div> -->
+					<!-- </div> -->
 				</div>
+				<!-- <div class="row">
+					<div class="col-xs-12"> -->
+				<div class="form-group">
+					<label for="imagePath">Image URL</label>
+					<input type="text" id="imagePath" formControlName="imagePath" class="form-control" #imagePath>
+					<!-- </div>
+					</div> -->
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12">
-					<div class="form-group">
-						<label for="imagePath">Image URL</label>
-						<input 
-							type="text"
-							id="imagePath"
-							formControlName="imagePath"
-							class="form-control"
-							#imagePath
-						>
-					</div>
+				<!-- <div class="row">
+					<div class="col-xs-12"> -->
+							<div class="form-group">
+				<img [src]="imagePath.value" alt="" class="img-responsive">
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12">
-					<img [src]="imagePath.value" alt="" class="img-responsive">
+				<!-- </div>
+				</div> -->
+				<!-- <div class="row">
+					<div class="col-xs-12"> -->
+				<div class="form-group">
+					<label for="description">Description</label>
+					<textarea type="text" id="description" class="form-control" formControlName="description" rows="6"></textarea>
+					<!-- </div>
+					</div> -->
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12">
-					<div class="form-group">
-						<label for="description">Description</label>
-						<textarea
-							type="text"
-							id="description"
-							class="form-control"
-							formControlName="description"
-							rows="6"
-						></textarea>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12" formArrayName="ingredients">
-					<div class="row" 
-						*ngFor="let ingredientCtrl of recipeForm.get('ingredients')['controls']; let i = index"
-						[formGroupName]="i"
-						style="margin-top: 10px;">
-						<div class="col-xs-8">
+				<!-- <div class="form-group row"> -->
+				<div class="form-group" formArrayName="ingredients">
+					<div class="form-row" *ngFor="let ingredientCtrl of recipeForm.get('ingredients')['controls']; let i = index"
+					 [formGroupName]="i" style="margin-top: 10px;">
+						<div class="col-8">
 							<!-- <label for="imagePath">Image URL</label> -->
-							<input 
-									type="text"
-									formControlName="name"
-									class="form-control"
-							>
+							<input type="text" formControlName="name" class="form-control">
 						</div>
-						<div class="col-xs-2">
+						<div class="col-2">
 							<input type="number" class="form-control" formControlName="amount">
 						</div>
-						<div class="col-xs-2">
-							<button 
-								class="btn btn-danger"
-								type="button"
-								(click)="onDeleteIngredient(i)"
-								>X</button>	
+						<div class="col-1">
+							<button class="btn btn-danger" type="button" (click)="onDeleteIngredient(i)">X</button>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-xs-12">
-							<button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
-						</div>
-					</div>
+					<!-- <div class="form-group"> -->
+					<!-- <div class="col-xs-12"> -->
+
+					<!-- </div> -->
+					<!-- </div> -->
 				</div>
-			</div>
-		</form>
+				<button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
+				<!-- </div> -->
+			</form>
+		</div>
 	</div>
 </div>
