--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,15 +1,19 @@
-<div class="row">
-	<div class="col-xs-10">
-		<app-shopping-edit></app-shopping-edit>
-		<hr>
-		<ul class="list-group">
-			<a 
-				class="list-group-item" 
-				style="cursor: pointer;"
-				*ngFor="let ingredient of ingredients; let i = index"
-				(click)="onEditIngredient(i)"
-				>
-				{{ ingredient.name }} - {{ ingredient.amount }}</a>
-		</ul>
+<div class="container">
+	<div class="row justify-content-center">
+		<div class="col-xs-10 mt-4">
+			<h4 class="mb-4">Add Item</h4>
+			<app-shopping-edit></app-shopping-edit>
+			<hr>
+			<h3 class="mb-4">Shopping List</h3>
+			<ul class="list-group">
+				<a 
+					class="list-group-item" 
+					style="cursor: pointer;"
+					*ngFor="let ingredient of ingredients; let i = index"
+					(click)="onEditIngredient(i)"
+					>
+					{{ ingredient.name }} - {{ ingredient.amount }}</a>
+			</ul>
+		</div>
 	</div>
 </div>
